// gRPC service for KV data backup
// This is between worker node and backup node, or a worker node and a to-be worker node
// (during worker data migration)

syntax = "proto3";

package kv.proto;
option go_package = "proto";

import "common.proto";

service KVBackup {
  // Transfer one entry(or multiple, small amount of entries) and return one ack,
  // this is for sync options, useful in lossless backup.
  rpc Sync(stream BackupEntry) returns (stream BackupReply) {}
}

message BackupReply {
  Status status = 1;
  uint64 version = 2;
}