// gRPC service for KV data worker internal logic
// These interfaces should not be exposed to the client
// @author Eugene Chen cyj205@sjtu.edu.cn

syntax = "proto3";

package kv.proto;
option go_package = "proto";

import "common.proto";
import "google/protobuf/empty.proto";

service KVWorkerInternal {
  rpc checkpoint(google.protobuf.Empty) returns (FlushResponse) {}
  rpc migrate(stream BackupEntry) returns (MigrationResponse) {}
}

message MigrationResponse {
  Status status = 1;
}

message FlushResponse {
  Status status = 1;
}